fixing some image links, hiding bubble nav titles on small widths, markup for work more consistent with publications

--- a/content/stylesheets/_promo-block.scss
+++ b/content/stylesheets/_promo-block.scss
@@ -72,6 +72,7 @@
         justify-content: center;
         .person {
             max-width: 125px;
+            width: 125px;
             padding: 0.5em;
             a {
                 text-decoration: none;
